--- a/Part 3/index.html
+++ b/Part 3/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> To Do List</title>
-    </head>
+<head>
+    <title> To Do List</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+</head>
 <body>
     <div class="toDoDiv">
         <p>
@@ -11,8 +13,19 @@
         </p>
         <h1>Things to do before the immersive:</h1>
         <ul>
-            
+
         </ul>
-    
+
     </div>
+    <script type="text/javascript">
+        $('#addBtn').click (function(){
+            if ($('#inputToDO').val().trim()==='') {
+                alert('insert text');
+            }else{
+                $('ul').append('<li>' + $('#inputToDO').val().trim() + '</li>') ;
+                $('#inputToDO').val('');
+            }
+        });
+    </script>
 </body>
+</html>
